[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/__tower_floor.gd" type="Script" id=1]
[ext_resource path="res://libs/gt_teleporter_2d/gt_teleporter_2d.gd" type="Script" id=2]
[ext_resource path="res://levels/assets/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://levels/assets/teleporter.png" type="Texture" id=4]
[ext_resource path="res://levels/scripts/level_enemies.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 384 )

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("root/next_floor_teleporter/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}

[node name="TowerFloor" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="root" type="Node2D" parent="."]
position = Vector2( -512, -384 )
__meta__ = {
"_edit_lock_": true
}

[node name="limit" type="StaticBody2D" parent="root"]
collision_layer = 2147483650
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="CollisionShape2D" parent="root/limit"]
position = Vector2( -64, 384 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="CollisionShape2D" parent="root/limit"]
position = Vector2( 1088, 384 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="terrain" type="TileMap" parent="root"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 4
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="spawn_teleporter" type="Area2D" parent="root"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )
is_enter = false

[node name="next_floor_teleporter" type="Area2D" parent="root"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="root/next_floor_teleporter"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="root/next_floor_teleporter"]
texture = ExtResource( 4 )

[node name="fall_down_trigger" type="Area2D" parent="root"]
collision_layer = 8
collision_mask = 8

[node name="Enemies" type="Node2D" parent="root"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )
[connection signal="teleported_entity" from="root/spawn_teleporter" to="." method="entity_arrived_at_floor"]
[connection signal="body_entered" from="root/fall_down_trigger" to="." method="entity_fell_down"]
[connection signal="player_entered" from="root/Enemies" to="." method="_on_Enemies_player_entered"]
